# chefclaw

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  system_prompt.txt
data/: pantry_thresholds.json
recipes/: chicken_rice_bowl.json  garlic_spinach.json  mushroom_tofu_stir_fry.json  tomato_egg_stir_fry.json
scripts/: healthcheck-local.sh  install-user-service.sh  start-local.sh
src/chef_claw/: __init__.py  api.py  catalog.py  config.py  db.py  formatting.py  main.py  parser.py  recipes.py  service.py  types.py
src/chef_claw/i18n/: __init__.py
systemd/: chef-claw.service
tests/: test_service.py
